# IoT

./: .coverage  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_file.txt  tox.ini
.github/workflows/: tests.yml
lista0/: .coverage  bin_file.json  file.json  pyproject.toml  test.json  z1.py
lista0/src/z0/: z0.py
lista0/src/z1/: bin_file.json  file.json  test.json  z1.py
lista0/tests/: test_z0.py  test_z1.py
pisklak/: __init__.py
pisklak/aggregator/: __init__.py  aggregator.py  data_generation.py
pisklak/controller/: __init__.py  controller.py
pisklak/filter/: __init__.py  filter.py  filter_ver2.py
pisklak/generators/: __init__.py
pisklak/generators/z4/: views.py
pisklak/generators/z5/: config0.toml  config1.toml  config2.toml  config3.toml  config4.toml  config_single.toml  generator.py  views.py
pisklak/heater/: __init__.py  heater.py
pisklak/lista0/: __init__.py
pisklak/manager/: __init__.py
pisklak/manager/templates/: aggregator_manager.html  aggregators.html  generators.html  generators2.html  manager.html  manager2.html
pisklak/manager/z5/: views.py
pisklak/manager/z8/: views.py
pisklak/templates/: generators.html  generators2.html  manager.html  manager2.html
pisklak/z1/: views.py
pisklak/z2/: views.py
pisklak/z3/: views.py
pisklak/z4/: views.py
pisklak/z5/: generator.py  views.py
pisklak_client/datasets/: data_generation.py
pisklak_client/z0/: __init__.py  main.py
pisklak_client/z1/: app1.py
pisklak_client/z2/: generator.py  get.py  testjson.py
pisklak_client/z3/: apps.py  config.toml  config_single.toml
tests/: .coverage  conftest.py  test_lista0.py  test_pisklak.py
tests/test_z1/: test_client.py  test_server.py
tests/test_z2_z3/: test_server.py
(+1 files in other folders)
