[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "pisklak"
version = "0.0.1"
description = "projekt na IoT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = "--cov=pisklak"
testpaths = [
    "tests",
]
