[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pisklak"
version = "0.0.3"
description = "projekt na IoT"
authors = ["me"]
readme = "README.md"
packages = [
    { include = "pisklak" },
    { include = "pisklak_client" },
]

[tool.pytest.ini_options]
addopts = "--cov=pisklak"
testpaths = [
    "tests",
]
