[metadata]
name = pisklak
description = IoT project app
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = piskle
install_requires =
    Flask==2.2.2
python_requires = >=3.10
zip_safe = no
package_dir =
    =pisklak

[options.package_data]
slapping = py.typed

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    tox>=3.26
    pytest-flask>=1.2.0

[flake8]
max-line-length = 120